--- a/packages/marketing/package.json
+++ b/packages/marketing/package.json
@@ -25,9 +25,6 @@
     "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.2.0",
-    "async": "^2.5.0",
-    "aws-sdk": "^2.77.0",
-    "lodash": "^4.17.4"
+    "webpack-merge": "^5.2.0"
   }
 }
