--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -20,13 +20,7 @@ jobs:
       - run: npm install
       - run: npm run build
 
-      - uses: actions/setup-python@v2
-        with:
-          python-version: "3.7"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install awscli
+      - uses: unfor19/install-aws-cli-action@v1
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
