--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -21,7 +21,19 @@ jobs:
       - run: npm run build
 
       - uses: chrislennon/action-aws-cli@v1.1
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+      - name: package and deploy cloudformation template
+        run: |
+          aws cloudformation package \
+              --template-file template.yaml \
+              --output-template-file output.yaml \
+              --s3-bucket ${BUCKET} \
+          aws cloudformation deploy \
+              --template-file output.yaml \
+              --stack-name ${PROJECT} \
+              --capabilities CAPABILITY_IAM \
+              --parameter-overrides \
+                  Environment=${ENV};
+          aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: "true"
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
